--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="@dimen/mtf_cardHeight_final"
-    tools:context="ankit.applespace.carbuddies.Activities.CreateActivity">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="ankit.applespace.carbuddies.Activities.MainActivity"
+    tools:showIn="@layout/app_bar_main"
+    android:orientation="vertical">
 
     <ImageView
         android:layout_width="match_parent"
