--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -2,8 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:fancy="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="ankit.applespace.carbuddies.Activities.MainActivity"
     tools:showIn="@layout/app_bar_main"
@@ -13,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2"
-        android:src="@drawable/user_icon"/>
+        android:src="@drawable/ic_logo"/>
     <TextView
         android:id="@+id/usernameTV"
         android:layout_width="wrap_content"
@@ -22,27 +24,65 @@
         android:text="xxxxxx"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:layout_gravity="center_horizontal"/>
-    <Button
-        android:id="@+id/createBtn"
-        android:layout_width="match_parent"
+    <RelativeLayout
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:text="Create Group"
-        android:layout_marginBottom="16dp"
         android:layout_weight="1"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:background="@color/colorPrimary"/>
 
-    <Button
-        android:id="@+id/joinBtn"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:text="Join Group"
-        android:layout_weight="1"
         android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginRight="16dp">
+        <mehdi.sakout.fancybuttons.FancyButton
+            android:id="@+id/continueBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Continue"
+            android:background="@color/colorPrimary"
+
+            fancy:fb_borderColor="#000000"
+            fancy:fb_borderWidth="1dp"
+            fancy:fb_defaultColor="@color/main_color"
+            fancy:fb_focusColor="#9bd823"
+            fancy:fb_radius="30dp"
+            fancy:fb_textColor="#FFFFFF"/>
+        <mehdi.sakout.fancybuttons.FancyButton
+            android:id="@+id/createBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/create_group"
+            android:background="@color/colorPrimary"
+
+            fancy:fb_borderColor="#000000"
+            fancy:fb_borderWidth="1dp"
+            fancy:fb_defaultColor="@color/main_color"
+            fancy:fb_focusColor="#9bd823"
+            fancy:fb_radius="30dp"
+            fancy:fb_textColor="#FFFFFF"/>
+
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:layout_marginBottom="16dp"
-        android:background="@color/colorPrimary"/>
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp">
+        <mehdi.sakout.fancybuttons.FancyButton
+            android:id="@+id/joinBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/join_group"
+            android:background="@color/colorPrimary"
+            fancy:fb_borderColor="#000000"
+            fancy:fb_borderWidth="1dp"
+            fancy:fb_defaultColor="@color/main_color"
+            fancy:fb_focusColor="#9bd823"
+            fancy:fb_radius="30dp"
+            fancy:fb_textColor="#FFFFFF"/>
+    </RelativeLayout>
+
+
 
     <View
         android:layout_width="match_parent"
