--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -6,23 +6,27 @@ android:layout_width="match_parent"
 android:layout_height="match_parent"
 tools:context="ankit.applespace.carbuddies.Activities.MapsActivity" >
 
+
+
+
     <fragment
-    android:id="@+id/map"
-    android:name="com.google.android.gms.maps.SupportMapFragment"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
-
-    <com.hanks.htextview.rainbow.RainbowTextView
+    <com.hanks.htextview.typer.TyperTextView
         android:id="@+id/rainbowTextView"
-        android:layout_width="120dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:text="4568"
+        android:gravity="left"
+        android:text="xxxxx"
         android:textSize="30sp"
-        app:colorSpace="150dp"
-        app:colorSpeed="4dp"
-        android:layout_centerHorizontal="true"
-        android:background="@color/colorPrimary"/>
+        app:charIncrease="3"
+        app:typerSpeed="80"
+
+        android:background="@color/colorPrimary" />
+
+
 
 </RelativeLayout>
